[package]
name = "ez_pqcrypto"
version = "0.1.0"
authors = ["Thomas Braun <tbraun96@gmail.com>"]
edition = "2018"
workspace = "../"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = [
    "./target/*"
]

[dependencies]
bytes = "0.5.4"
pqcrypto = "0.9.0"

[dev-dependencies]
criterion = "*"

[profile.bench]
debug = true

[[bench]]
name = "benchmarks"
harness = false