[package]
name = "ez_pqcrypto"
version = "0.1.1"
authors = ["Thomas Braun <tbraun96@gmail.com>"]
edition = "2018"
description = "Abstracts over pqcrypto. Allows selecting a post-quantum encryption algorithm by setting a single byte-sized value. Useful for multi-algorithmic or nondeterministic schemes"
readme = "README.md"
homepage = "https://thomaspbraun.com/"
repository = "https://github.com/tbraun96/ez_pqcrypto/"
license-file = "LICENSE"
workspace = "../"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = [
    "./target/*"
]

[dependencies]
bytes = "0.5.4"
pqcrypto = "0.9.0"
pqcrypto-traits = "0.3.3"
serde = "1.0.104"
bincode2 = "2.0.1"
rand = "0.7.3"

[dev-dependencies]
criterion = "0.3.1"

[profile.bench]
debug = true

[[bench]]
name = "benchmarks"
harness = false